solc_ossfuzz_seed_corpus/test_sol/test_a6ad76acd486dc5cf1da1585ee548137b7c5eb6d47098ba6ec52bd325c2693de_3d04fce7589ab0e4c6592fd25690bb7dcf52f050_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
library L0 {
  function f0(function (bool, bytes memory, bytes7) internal   returns (bytes memory) i0) public   
  {
  }
}
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su1.sol:27-101): Internal type is not allowed for public or external functions.
